# sqlx_sqlite_consistency

./: Cargo.toml
src/: lib.rs
