[package]
name = "sqlx_sqlite_consistency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite" ] }
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }

[dev-dependencies]
rstest = "0.17.0"
tempfile = "3.5.0"
